# planetr-faas-waasm-template

./: Cargo.toml  README.md
src/: handler.rs  lib.rs
src/handler/: mod.rs
