[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.33"
planetr = "0.2.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = 's'
